<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_bg"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/c_primary"
        android:paddingHorizontal="@dimen/screen_padding"
        app:contentInsetStart="@dimen/screen_padding"
        app:contentInsetEnd="@dimen/screen_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/main_title"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/friendsMenuContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/screen_padding"
        android:paddingVertical="@dimen/item_spacing"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnFriendsList"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/friends_list" />

        <Space
            android:layout_width="@dimen/item_spacing"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btnAddFriend"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/add_friend" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/screen_padding"
        android:paddingTop="@dimen/item_spacing"
        android:paddingBottom="@dimen/screen_padding"
        app:layout_constraintTop_toBottomOf="@id/friendsMenuContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_padding"
        android:contentDescription="@string/skapa_chattrum"
        android:src="@android:drawable/ic_input_add"
        android:elevation="12dp"
        app:backgroundTint="@color/c_primary"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
