<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/space_l"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/messageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space_l"
        android:background="@color/c_bg"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_height"
            android:layout_weight="1"
            android:background="@drawable/bg_input"
            android:hint="@string/hint_skriv_meddelande"
            android:paddingHorizontal="@dimen/space_l"
            android:textColor="@color/c_on_surface"
            android:textColorHint="@color/c_on_surface_muted"
            android:inputType="textCapSentences"/>

        <ImageButton
            android:id="@+id/btnInviteFriend"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_marginStart="@dimen/space_s"
            android:src="@android:drawable/ic_menu_add"
            android:background="@drawable/bg_card"
            android:contentDescription="@string/bjud_in_van"/>

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_marginStart="@dimen/space_s"
            android:src="@android:drawable/ic_menu_send"
            android:background="@drawable/bg_card"
            android:contentDescription="@string/skicka"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
